main_app/manifests/datehash-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: datehash-svc
  namespace: pingpongdatehash
spec:
  type: LoadBalancer
  selector:
    app: datehash 
  ports:
    - port: 2345
      name: hashport
      protocol: TCP
      targetPort: 3500
