main_app/manifests/ingress-gke.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: datehash-ingress
  namespace: pingpongdatehash
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: datehash-svc
          servicePort: 80
