main_app/manifests/ingress-old.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: datehash-ingress
  namespace: pingpongdatehash
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: datehash-svc
            port: 
              number: 2345
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port:
              number: 1234
